--- a/package.json
+++ b/package.json
@@ -17,23 +17,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.4",
-    "express": "^4.18.2",
-    "http-status": "^1.7.3",
-    "mongoose": "^8.1.3",
-    "zod": "^3.22.4"
+    "cors": "latest",
+    "dotenv": "latest",
+    "express": "latest",
+    "http-status": "latest",
+    "mongoose": "latest",
+    "zod": "latest"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.11.19",
-    "@typescript-eslint/eslint-plugin": "^7.0.1",
-    "@typescript-eslint/parser": "^7.0.1",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
-    "prettier": "^3.2.5",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.3.3"
+    "@types/cors": "latest",
+    "@types/express": "latest",
+    "@types/node": "latest",
+    "@typescript-eslint/eslint-plugin": "latest",
+    "@typescript-eslint/parser": "latest",
+    "eslint": "latest",
+    "eslint-config-prettier": "latest",
+    "prettier": "latest",
+    "ts-node-dev": "latest",
+    "typescript": "latest"
   }
 }
