--- a/package.json
+++ b/package.json
@@ -16,24 +16,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "cors": "latest",
-    "dotenv": "latest",
-    "express": "latest",
-    "http-status": "latest",
-    "mongoose": "latest",
-    "zod": "latest"
-  },
-  "devDependencies": {
-    "@types/cors": "latest",
-    "@types/express": "latest",
-    "@types/node": "latest",
-    "@typescript-eslint/eslint-plugin": "latest",
-    "@typescript-eslint/parser": "latest",
-    "eslint": "latest",
-    "eslint-config-prettier": "latest",
-    "prettier": "latest",
-    "ts-node-dev": "latest",
-    "typescript": "latest"
-  }
+  "dependencies": {},
+  "devDependencies": {}
 }
