--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,3 @@
-PORT=
-DATABASE_URL=
-DB_Name=
+PORT=5000
+DATABASE_URL=mongodb+srv://yourUserName:yourPassword@cluster0.jowkg7d.mongodb.net
+DB_Name=collectionName
